<resources>
    <string name="app_name">FootLab</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">home_fragment</string>
    <string name="photo_image">Photo Image</string>
    <string name="eliminar">Eliminar</string>
    <string name="clasificar">Clasificar</string>
    <string name="segmentar">Segmentar</string>
    <string name="original_image_description">Original Image</string>
    <string name="classified_image_description">Classified Image\n</string>
    <string name="analizar">Analizar</string>
    <string name="navigation_drawer_open">Abrir menú\n\n</string>
    <string name="navigation_drawer_close">Cerrar menú</string>


    <string name="area_de_la_herida">Área de la herida: %1$.2f cm²</string>
    <string name="perimetro_de_la_herida">Perímetro de la herida: %1$.2f cm</string>
    <string name="red_percentage">Rojizo (Rojo) %.2f%%</string>
    <string name="yellow_percentage">Amarillento (Amarillo): %.2f%%</string>
    <string name="blue_percentage">Negruzco (Azul): %.2f%%</string>
    <string name="classification_results_summary">Resultados de Clasificación</string>
    <string name="porcentaje_epitelial_rojo">Porcentaje de rojo:</string>
    <string name="porcentaje_esfacelar_amarillo">Porcentaje de amarillo:</string>
    <string name="porcentaje_necrosado_azul">Porcentaje de azúl:</string>
    <string name="resultados_de_clasificaci_n">Porcentajes de Coloración</string>
    <string name="clasificaci_n_de_tejidos">Clasificación de Herida</string>
    <string name="ver_historial_cl_nico">VER HISTORIAL CLÍNICO</string>

    <string name="porcentaje_epitelial_rojo2">Rojizo: %.2f%%</string>
    <string name="porcentaje_esfacelar_amarillo2">Amarillento: %.2f%%</string>
    <string name="porcentaje_necrosado_azul2">Negruzco: %.2f%%</string>

    <string name="ver_resultados">VER RESULTADOS</string>
    <string name="aqu_puedes_visualizar_tus_resultados">Aquí puedes visualizar tus resultados</string>
    <string name="porcentaje_de_calloso">Porcentaje de calloso: %.2f%%</string>
    <string name="porcentaje_de_fibrina">Porcentaje de fibrina: %.2f%%</string>
    <string name="porcentaje_de_granulacion">Porcentaje de granulación: %.2f%%</string>
    <string name="tama_o_de_calloso">Tamaño de calloso:</string>
    <string name="tama_o_de_granulado">Tamaño de granulado:</string>
    <string name="tama_o_de_fibrina">Tamaño de fibrina:</string>
    <!-- Optional summary -->
</resources>